[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sbn"
description = "Since 4 March 2019"
version = "150"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl" },
]
readme = "README.rst"
license = { text="Public Domain"}
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: Unlicense',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/sbn"
"bugs" = "https://github.com/bthate/sbn/issues"
"source" = "https://github.com/bthate/sbn"


[tool.setuptools]
packages = [
    'sbn',
    'sbn.modules',
    'sbn.network',
    'sbn.nucleus',
    'sbn.nucleus.pdf',
    'sbn.nucleus._static',
    'sbn.nucleus._images',
]
include-package-data = true


[tool.setuptools.package-data]
"sbn.nucleus"         = ["*"]
"sbn.nucleus.pdf"     = ["*"]
"sbn.nucleus._images" = ["*"]
"sbn.nucleus._static" = ["*"]
