[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sbn"
description = "Since 4 March 2019."
version = "152"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl" },
]
readme = "README.rst"
license = "Unlicense"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.scripts]
"sbn" = "sbn.runtime:main"


[project.urls]
"home" = "https://pypi.org/project/sbn"
"bugs" = "https://github.com/bthate/sbn/issues"
"source" = "https://github.com/bthate/sbn"


[tool.setuptools]
packages = [
    'sbn',
    'sbn.modules',
    'sbn.network',
    'sbn.network.pdf',
    'sbn.network._static',
    'sbn.network._images',
]
include-package-data = true


[tool.setuptools.package-data]
"sbn.network"         = ["*"]
"sbn.network.pdf"     = ["*"]
"sbn.network._images" = ["*"]
"sbn.network._static" = ["*"]
